--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script async defer src='https://app.visitortracking.com/assets/js/tracer.js'></script>
+    <script>
+    function init_tracer() {
+       var tracer = new Tracer({  
+       websiteId : "aff759e4-c5c9-4e80-a3a1-cbc6b6246447",  
+       async : true,
+       debug : false });
+     }
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
